@@ -17,3 +17,4 @@ v0.1.2
 v0.1.3
 
 * winws2: set low mandatory level in process token if possible : no --wlan-filter or --nlm-filter (no windivert reinit required)
+* nfqws2: optimize debug logging to file
